<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Application Background"
        android:scaleType="centerCrop"
        android:src="@drawable/abstract1" />

    <TextView
        android:id="@+id/center_textview_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/or_text"
        android:textColor="@color/colorFonts"
        android:textSize="@dimen/fontXLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/center_textview_know"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center_textview_or"
        android:layout_centerHorizontal="true"
        android:text="@string/know_text"
        android:textColor="@color/colorFonts"
        android:textSize="@dimen/fontXLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/center_textview_knever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_textview_or"
        android:layout_centerHorizontal="true"
        android:text="@string/knever_text"
        android:textColor="@color/colorFonts"
        android:textSize="@dimen/fontXLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/geography_button"
        style="@style/ButtonStyle"
        android:layout_above="@+id/history_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbuttongeography"
        android:onClick="showQuiz"
        android:text="@string/geography_text" />

    <Button
        android:id="@+id/arts_button"
        style="@style/ButtonStyle"
        android:layout_below="@+id/history_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbuttonarts"
        android:onClick="showQuiz"
        android:text="@string/arts_text" />

    <Button
        android:id="@+id/sports_button"
        style="@style/ButtonStyle"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/arts_button"
        android:background="@drawable/roundedbuttonsports"
        android:onClick="showQuiz"
        android:text="@string/sports_text" />

    <Button
        android:id="@+id/history_button"
        style="@style/ButtonStyle"
        android:layout_alignBaseline="@+id/sports_button"
        android:layout_alignBottom="@+id/sports_button"
        android:layout_toStartOf="@+id/geography_button"
        android:background="@drawable/roundedbuttonhistory"
        android:onClick="showQuiz"
        android:text="@string/history_text" />

</RelativeLayout>
